// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`account reducer should handle the DID_SET action  1`] = `
Object {
  "claims": Immutable.Map {
    "loading": false,
    "savedClaims": Object {
      "contact": Array [
        Object {
          "category": "contact",
          "claimField": "email",
        },
      ],
      "personal": Array [
        Object {
          "category": "personal",
          "claimField": "name",
        },
      ],
    },
  },
  "did": Immutable.Map {
    "did": "mock did",
  },
  "loadingState": Immutable.Map {
    "loading": true,
  },
}
`;

exports[`account reducer should initialize correctly 1`] = `
Object {
  "claims": Immutable.Map {
    "loading": false,
    "savedClaims": Object {
      "contact": Array [
        Object {
          "category": "contact",
          "claimField": "email",
        },
      ],
      "personal": Array [
        Object {
          "category": "personal",
          "claimField": "name",
        },
      ],
    },
  },
  "did": Immutable.Map {
    "did": "",
  },
  "loadingState": Immutable.Map {
    "loading": true,
  },
}
`;
